Prevent captions on smaller screens

--- a/_sass/248acu/hero/_slider-2025.scss
+++ b/_sass/248acu/hero/_slider-2025.scss
@@ -42,6 +42,7 @@
     }
 
     &__overlay {
+        display: none; // The overlay captions don't work on smaller screens
         animation: none;
         opacity: 0;
 
@@ -52,6 +53,11 @@
         width: 100%;
         height: 100%;
         background-color: rgba(#000, 0.4);
+
+        // Only run captions on large screens otherwise text gets scrunched up on smaller screens.
+        @include breakpoint($large) {
+            display: block;
+        }
 
         // This modifier class will be toggled on the overlay to show it with an animation.
         &--shown {
